--- a/SeaBattle/SeaBattle.vcxproj
+++ b/SeaBattle/SeaBattle.vcxproj
@@ -137,6 +137,9 @@
   <ItemGroup>
     <ClCompile Include="SeaBattle.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Classes.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
