--- a/SeaBattle/SeaBattle.vcxproj.filters
+++ b/SeaBattle/SeaBattle.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Classes.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ScreenState.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
